# pesquisa-e-ordenacao

./: .gitignore  main.py  pyproject.toml  sort_runner.py
outputs/: InsertionSort_100_Normal_20250422_223750.txt
sorts/: __init__.py  heap_sort.py  merge_sort.py  quick_sort.py  radix_sort.py
ui/: __init__.py  app.py  handlers.py  layout.py
